added netlify and basic styling

--- a/styles/global.css
+++ b/styles/global.css
@@ -33,3 +33,10 @@ header .logo {
 main {
     padding: 20px;
 }
+
+.header {
+    font-size: xx-large;
+    font-weight: bolder;
+    color: blue;
+
+}
