--- a/styles/global.css
+++ b/styles/global.css
@@ -11,9 +11,9 @@ body {
     background-size: cover;
     display: grid;
     transform: scale(0.6);
-    position: sticky;
+    position: relative;
     grid-template-columns: max-content;
-    margin-left: -300px;
+    margin-left: -250px;
 
 }
 
@@ -89,11 +89,12 @@ img {
     border-bottom: dashed 10px;
     border-color: black;
     padding: 10px;
-    height: auto;
+    height: 20%;
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: auto;
+    width: 20%;
+    image-resolution: ;
 
 
 }
@@ -111,12 +112,13 @@ section {
 #animal-list,
 #avatar-list,
 #company-list {
-    width: 90%;
+    border-width: 90%;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     justify-items: center;
     align-items: center;
-    border: double 5px white;
+    border: double 7px white;
+
 }
 
 #stock-section,
@@ -125,17 +127,28 @@ section {
 #company-section {
     border: 5px solid black;
     border-radius: 20px;
-    padding: 10px;
-    margin-top: 20px;
+    padding: 32px;
+    margin-top: 100px;
     margin-bottom: 20px;
     color: white;
-    font-size: 50px;
-
+    font-size: 100px;
+    border-width: 100%;
+    text-align: center;
+    font-weight: bolder;
 
 }
 
-p {
-    font-size: medium;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 
+p {
+    font-size: 30px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-style: italic;
+    word-wrap: break-word;
+    text-align: center;
+}
+
+.gif {
+    transform: scale(.5);
+    margin: 0;
+    padding: 0;
 }
